Make sure text is visible on active navigation

--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ header > h1 {
 
 a#active {
     background-color: var(--color-five);
-    color: #fff;
+    color: #fff !important;
 }
 
 footer {
